# kiwiparser

./: .editorconfig  .gitignore  CMakeLists.txt  README.md
examples/: CMakeLists.txt  example1.cpp  point.kiwi
include/kiwicpp/: math.hpp
include/kiwiparser/: ast.hpp  kiwiparser.hpp  lexer.hpp  math.hpp  parser.hpp
tests/: CMakeLists.txt  test_library.cpp
